objects/Quota__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Apr__c</fullName>
        <defaultValue>ABS( $User.April_Actual__c )</defaultValue>
        <label>Actual-Apr</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Aug__c</fullName>
        <label>Actual-Aug</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Dec__c</fullName>
        <label>Actual-Dec</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Feb__c</fullName>
        <label>Actual-Feb</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Jan__c</fullName>
        <label>Actual-Jan</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Jul__c</fullName>
        <label>Actual-Jul</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Jun__c</fullName>
        <label>Actual-Jun</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Mar__c</fullName>
        <label>Actual-Mar</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_May__c</fullName>
        <label>Actual-May</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Nov__c</fullName>
        <label>Actual-Nov</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Oct__c</fullName>
        <label>Actual-Oct</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Q1__c</fullName>
        <formula>Actual_Jan__c +  Actual_Feb__c +  Actual_Mar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Q2__c</fullName>
        <formula>Actual_Apr__c  +  Actual_May__c  +  Actual_Jun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of April-June</inlineHelpText>
        <label>Actual-Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Q3__c</fullName>
        <formula>Actual_Jul__c  +  Actual_Aug__c  +  Actual_Sep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of July-Sept</inlineHelpText>
        <label>Actual-Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Sep__c</fullName>
        <label>Actual-Sep</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <defaultValue>&quot;$User.FirstName&quot; + &quot; &quot; + &quot;$User.LastName&quot;</defaultValue>
        <label>Full Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manager_Full_name__c</fullName>
        <label>Manager: Full name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Apr__c</fullName>
        <formula>Actual_Apr__c  /  Quota_Apr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Apr</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Aug__c</fullName>
        <formula>Actual_Aug__c  /  Quota_Aug__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Aug</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Dec__c</fullName>
        <formula>Actual_Dec__c  /  Quota_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Dec</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Feb__c</fullName>
        <formula>Actual_Feb__c /  Quota_Feb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Feb</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Jan__c</fullName>
        <formula>Actual_Jan__c /  Quota_Jan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Jan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Jul__c</fullName>
        <formula>Actual_Jul__c  /  Quota_Jul__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Jul</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Jun__c</fullName>
        <formula>Actual_Jun__c  /  Quota_Jun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Jun</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Mar__c</fullName>
        <formula>Actual_Mar__c /  Quota_Mar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Mar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_May__c</fullName>
        <formula>Actual_May__c  /  Quota_May__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent May</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Nov__c</fullName>
        <formula>Actual_Nov__c  /  Quota_Nov__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Nov</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Oct__c</fullName>
        <formula>Actual_Oct__c  /  Quota_Oct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Oct</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Q1__c</fullName>
        <formula>Actual_Q1__c /  Quota_Q1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Q2__c</fullName>
        <formula>Actual_Q2__c /  Quota_Q2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Q3__c</fullName>
        <formula>Actual_Q3__c  /  Quota_Q3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Q3</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Sep__c</fullName>
        <formula>Actual_Sep__c  /  Quota_Sep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Sep</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profile_name__c</fullName>
        <label>Profile name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_2017__c</fullName>
        <label>Quota-2017</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Apr__c</fullName>
        <defaultValue>$User.April__c</defaultValue>
        <label>Quota-Apr</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Aug__c</fullName>
        <label>Quota-Aug</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Dec__c</fullName>
        <label>Quota-Dec</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Feb__c</fullName>
        <defaultValue>$User.February__c</defaultValue>
        <label>Quota-Feb</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Jan__c</fullName>
        <defaultValue>$User.January__c</defaultValue>
        <label>Quota-Jan</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Jul__c</fullName>
        <label>Quota-Jul</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Jun__c</fullName>
        <label>Quota-Jun</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Mar__c</fullName>
        <defaultValue>$User.March__c</defaultValue>
        <label>Quota-Mar</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_May__c</fullName>
        <label>Quota-May</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Nov__c</fullName>
        <label>Quota-Nov</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Oct__c</fullName>
        <label>Quota-Oct</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Q1__c</fullName>
        <defaultValue>$User.Q1__c</defaultValue>
        <label>Quota-Q1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Q2__c</fullName>
        <defaultValue>$User.Q2__c</defaultValue>
        <label>Quota-Q2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Q3__c</fullName>
        <label>Quota-Q3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Sep__c</fullName>
        <label>Quota-Sep</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>User ID field.</description>
        <label>User ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Username in the form of an email address.</description>
        <label>Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Quota</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>